crates/ars-components/src/navigation/steps/snapshots/ars_components__navigation__steps__tests__steps_description.snap
---
source: crates/ars-components/src/navigation/steps.rs
expression: snapshot_attrs(&api.description_attrs(1))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-index",
            ),
            String(
                "1",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "steps",
            ),
        ),
    ],
    styles: [],
}
