crates/ars-components/src/navigation/steps/snapshots/ars_components__navigation__steps__tests__steps_indicator_complete.snap
---
source: crates/ars-components/src/navigation/steps.rs
expression: snapshot_attrs(&api.indicator_attrs(0))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "steps",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "complete",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
