crates/ars-components/src/navigation/steps/snapshots/ars_components__navigation__steps__tests__steps_item_current.snap
---
source: crates/ars-components/src/navigation/steps.rs
expression: snapshot_attrs(&api.item_attrs(1))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-index",
            ),
            String(
                "1",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "steps",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "current",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Step 2 of 4",
            ),
        ),
        (
            Aria(
                Current,
            ),
            String(
                "step",
            ),
        ),
        (
            Role,
            String(
                "listitem",
            ),
        ),
    ],
    styles: [],
}
