crates/ars-components/src/navigation/steps/snapshots/ars_components__navigation__steps__tests__steps_list.snap
---
source: crates/ars-components/src/navigation/steps.rs
expression: snapshot_attrs(&api.list_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "list",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "steps",
            ),
        ),
        (
            Role,
            String(
                "list",
            ),
        ),
    ],
    styles: [],
}
