crates/ars-components/src/navigation/steps/snapshots/ars_components__navigation__steps__tests__steps_prev_enabled.snap
---
source: crates/ars-components/src/navigation/steps.rs
expression: snapshot_attrs(&api.prev_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "prev-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "steps",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
